responsives, added. files are not yet validated. last update 29/1/2024

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -11,17 +11,23 @@
 <body>
     <header>
         <h2 class="logo">HealTECH</h2>
-
         <nav>
-            <ul id="sidemenu">
+            <ul class="sidebar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="jobs.html">Job offers</a></li>
                 <li><a href="apply.html">Apply</a></li>
             </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="jobs.html">Job offers</a></li>
+                <li><a href="apply.html">Apply</a></li>
+                
+            </ul>
         </nav>
 
-        <div id="menubtn" class="fas fa-bars"></div>
+        
     </header>
     <section class="home">
         <div class="content">
