html validation checked

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -40,7 +40,7 @@
             <a href="apply.html" class="btn">Join us now</a>
         </div>
         <div class="image">
-            <img src="images/background.jpg" alt="laboratory" caption="Our laboratory">
+            <img src="images/background.jpg" alt="laboratory">
         </div>
     </section>
     <hr>
@@ -63,7 +63,7 @@
     <hr class="new1">
 
 
-<!--------about--------->
+<!------about------>
     <section class="about">
         <h1 class="sub-title">Our vision</h1>
         <br> <br>
@@ -108,13 +108,13 @@
     </section>
     <br> <br> <br>
     <hr class="new1">
-<!------News-------->
+<!------News------>
 <section class="news">
     <h1 class="sub-title">Related Articles</h1>
     <br> <br> <br>
     <div class="container">
             <div class="image">
-                <img src="images/HIV risk.jpg" alt="Risk of HIV in young Vietnamese">
+                <img src="images/HIV-risk.jpg" alt="Risk of HIV in young Vietnamese">
             </div>
             <div class="article-content">
                 <h3>Risk of HIV among young Vietnamese</h3>
@@ -166,11 +166,11 @@
     </section>
     <section class="newsletter-module">
         <div class="second-bottom"></div>
-        <center><h1>Sign up to our newsletter</h1></center>
+        <h1>Sign up to our newsletter</h1>
         <br> <br>
-        <center><p>Keep up to date with out latest publications and job offers</p></center>
+        <p>Keep up to date with out latest publications and job offers</p>
         <br> <br>
-        <center><a href="#" class="button-green">Sign up now</a></center>
+        <a href="#" class="button-green">Sign up now</a>
     </section>
     <br> <br> <br> <br> <br> <br> <br> 
     <section class="footer">
