--- a/assign1/index.html
+++ b/assign1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta author="Nguyen Ngoc Phuong Linh">
+    <meta name="author" content="Nguyen Ngoc Phuong Linh">
     <title>Healtech research lab</title>
     <link rel="stylesheet" href="styles/index.css">
     <script src="https://kit.fontawesome.com/3b2d7757ec.js" crossorigin="anonymous"></script>
