--- a/assign1/index.html
+++ b/assign1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Nguyen Ngoc Phuong Linh">
     <title>Healtech research lab</title>
-    <link href="styles/index2.css" rel="stylesheet">
+    <link href="styles/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3b2d7757ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
